libv8 (2.2.6-1) unstable; urgency=low

  * New upstream release, previous procedure followed.
  * Switch to dpkg-source 3.0 (quilt) format.
  * Uses scons.mk from cdbs.

 -- Jérémy Lal <kapouer@melix.org>  Tue, 27 Apr 2010 13:03:45 +0200

libv8 (2.1.10-1) unstable; urgency=low

  * New upstream release
    + debian/rules: SONAME updated
    + debian/control: updated any reference to the old version
    + debian/patches/0001-enable_soname.patch: SONAME updated
    + debian/libv8-$VERSION.install renamed with the new version
  * debian/patches:
    + 0001-enable_soname.patch: slightly modified to use the right SONAME
    + 0004-add-the-install-target.patch: refreshed
  * debian/README.source: added a procedure to update to a new version
    once the correct version is imported

 -- Antonio Radici <antonio@dyne.org>  Sat, 27 Mar 2010 15:12:42 +0000

libv8 (2.1.6-1) unstable; urgency=low

  [ Antonio Radici ]
  * New upstream release
    + package should now build clean with gcc-4.5 (Closes: 565030)
    + debian/rules: SONAME var updated
    + debian/libv8-2.0.3.install edited and renamed to libv8-2.1.6.install
    + debian/control: s/2.0.3/2.1.6/
  * debian/control: Standards-Version bumped to 3.8.4 (no changes required)
  * debian/patches:
    + refreshed all patches
    + x86_64_code.patch: changed to drop any reference to ia64 
      (it does not seem to build there)

  [ Jérémy Lal ]
  * debian/copyright: updated to reflect the missing files/dates
  * debian/patches:
    + new naming scheme which preserves the ordering
    + added mips to the x86_64_code.patch

 -- Antonio Radici <antonio@dyne.org>  Sun, 21 Mar 2010 10:58:49 +0000

libv8 (2.0.3-2) unstable; urgency=low

  * Modified the upstream soname (from libv8-2.0.3.so to libv8.so.2.0.3)
    + restored patches/enable_soname.patch
    + restore the link commands in debian/rules
  * Added a libv8-2.0.3.install so that the package is not empty anymore
    + (Closes: 560433)
